zeit.content.article changes
============================

2.8.1 (unreleased)
------------------

- Nothing changed yet.


2.8.0 (2009-12-18)
------------------

- NoAutomaticMetadataUpdate entfernt.
- Absätze werden wieder korrekt gezählt (#6197).
- Nur Artikel mit der product_id 'ZEDE' haben standardmäßig den Haken 'Export
  zum Tagesspiegel' gesetzt (#6184).


2.7.2 (2009-09-21)
------------------

- Keine Abhängigkeit zu zope.app.twisted mehr.


2.7.1 (2009-09-17)
------------------

- CDS-Pfade für Tag/Montag mit führender Null.


2.7 (2009-09-09)
----------------

- Es wird nur noch genau der veröffentlichte Artikel in die CDS exportiert und
  keine Artikel mehr, die durch Workflowabhängigkeiten veröffentlicht wurden.


2.6.1 (2009-09-05)
------------------

- Tests für Änderungen an zeit.cms angepasst.


2.6 (2009-08-26)
----------------

- Weitere Ersetzungsmöglichkeiten für den CDS-Import-Pfad: `real_year`,
  `real_month`, `real_day`, `ressort` und `sub_ressort`. Dies ermöglicht die
  neue Verzeichnisstuktur (#6045).


2.5 (2009-08-21)
----------------

- Templates für Artikel gibt es nicht mehr.

- Tests repariert (#5946).

2.4 (2009-08-11)
----------------

- Banner-Feld entfernt (nach zeit.cms gewandert, #5931)

2.3 (2009-08-03)
----------------

- »RemainingFields« benutzten, damit Erweiterungen an den Standardmetadaten
  korrekt angezeigt werden.

- Sicherstellen, dass Seitenumgbrüche nicht »None« als Teaser haben.

2.2 (2009-07-23)
----------------

- Adapter zur Volltextindizierung hinzugefügt.

- Abhängigkeiten zu anderen Paketen reduziert.

- CDS-Import von Artikeln mit ungültigem Ressort korrigiert, nach dem ungültige
  Ressorts jetzt im CMS angezeigt werden.

2.1 (2009-06-18)
----------------

- Ein Artikel kann eine CenterPage als sein Layout referenzieren (#5491).

- Tests für Hashed-Resources angepasst.

- CDS beim import weniger aggresiv (#5525).
  
- Nicht veröffentlichte CDS-Artikel werden jetzt in der Nacht gelöscht.

2.0 (2009-06-08)