@@ -4,7 +4,6 @@
   xmlns:gocept="http://namespaces.gocept.com/zcml"
   i18n_domain="zeit.cms">
 
-  <subscriber handler=".comment.register_asset_interface" />
   <adapter factory=".comment.comment_browse_location" />
 
   <browser:page
